<resources>
    <string name="app_name">Bill Please</string>
    <string name="total_cost">Total Cost:</string>
    <string name="togglebutton">toggleButton</string>
    <string name="amount">Amount</string>
    <string name="num_of_pax">Num Of Pax</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="gst_togglebutton">gst_togglebutton</string>
    <string name="gst">GST</string>
    <string name="no_gst">NO GST</string>
    <string name="no_svc">NO SVC</string>
    <string name="svc">SVC</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
    <string name="discount">Discount (%)</string>
</resources>