<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount" />

    <EditText
        android:id="@+id/enter_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/numOfPeople"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/num_of_pax" />

    <EditText
        android:id="@+id/num_people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/togglebutton"
            android:textOff="@string/no_svc"
            android:textOn="@string/svc" />

        <ToggleButton
            android:id="@+id/gst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gst_togglebutton"
            android:textOff="@string/gst"
            android:textOn="@string/no_gst" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discount" />

    <EditText
        android:id="@+id/discount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <RadioGroup
        android:id="@+id/payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30sp"
            android:layout_marginRight="30sp"
            android:text="@string/cash" />

        <RadioButton
            android:id="@+id/payNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paynow" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/split"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/split"
            android:textColor="#0C0C0C"
            app:backgroundTint="#D5D0D0" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"
            android:textColor="#151515"
            app:backgroundTint="#D5D0D0" />
    </LinearLayout>

    <TextView
        android:id="@+id/total_bill"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/total_cost" />

</LinearLayout>